Update to latest template version

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,92 @@
----
----
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@InProceedingsEarly{covert3d,
+  author = {Alaniz, Robert M. and Caballero, David and Gomez, Timothy and Grizzell, Elise and Rodriguez, Andrew and Schweller, Robert and Wylie, Tim},
+  title = {Covert Computation in the Abstract Tile-Assembly Model},
+  booktitle = {Proc. of the Symposium on Algorithmic Foundations of Dynamic Networks (SAND'23)},
+  year = {2023},
+  selected = {true},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@InProceedingsEarly{stagedsim,
+  author = {Cirlos, Sonya C. and Gomez, Timothy and Grizzell, Elise and Rodriguez, Andrew and Schweller, Robert and Wylie, Tim},
+  title = {Simulation of Multiple Stages in Single Bin Active Tile Self-Assembly},
+  booktitle = {Proc. of the 20th International Conference on Unconventional Computation and Natural Computation (UCNC'23)},
+  year = {2023},
+  selected = {true},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@InProceedings{pikmin,
+  author = {Rodriguez, Andrew},
+  title = {Reachability in Pikmin Cave Sublevels is PSPACE-Complete (Short Abstract)},
+  booktitle = {The 24th Japan Conference on Discrete and Computational Geometry, Graphs, and Games (JCDCG3'22)},
+  year = {2022},
+  selected = {false},
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@InProceedings{crnreach,
+  author = {Fu, Bin and Gomez, Timothy and Grizzell, Elise and Rodriguez, Andrew and Schweller, Robert and Wylie, Tim},
+  title = {Reachability in Population Protocols is PSPACE-Complete (Short Abstract)},
+  booktitle = {The 24th Japan Conference on Discrete and Computational Geometry, Graphs, and Games (JCDCG3'22)},
+  year = {2022},
+  selected = {true},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@InProceedings{squares,
+  author =  {Alaniz, Robert M. and Caballero, David and Cirlos, Sonya C. and Gomez, Timothy and Grizzell, Elise and Rodriguez, Andrew and Schweller, Robert and Tenorio, Armando and Wylie, Tim},
+  title = {Building Squares with Optimal State Complexity in Restricted Active Self-Assembly},
+  booktitle = {Proc. of the Symposium on Algorithmic Foundations of Dynamic Networks (SAND'22)},
+  pages = {6:1--6:18},
+  series =  {Leibniz International Proceedings in Informatics (LIPIcs)},
+  ISBN =  {978-3-95977-224-2},
+  ISSN =  {1868-8969},
+  year =  {2022},
+  volume =  {221},
+  editor =  {Aspnes, James and Michail, Othon},
+  publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  address = {Dagstuhl, Germany},
+  URL =   {https://drops.dagstuhl.de/opus/volltexte/2022/15948},
+  annote =  {Keywords: Active Self-Assembly, State Complexity, Tile Automata},
+  selected={true},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@misc{https://doi.org/10.48550/arxiv.2211.12603,
+  doi = {10.48550/ARXIV.2211.12603},
+  
+  url = {https://arxiv.org/abs/2211.12603},
+  arxiv = {2211.12603},
+  
+  author = {Alaniz, Robert M. and Fu, Bin and Gomez, Timothy and Grizzell, Elise and Rodriguez, Andrew and Schweller, Robert and Wylie, Tim},
+  
+  keywords = {Distributed, Parallel, and Cluster Computing (cs.DC), Discrete Mathematics (cs.DM), Emerging Technologies (cs.ET), Adaptation and Self-Organizing Systems (nlin.AO), Molecular Networks (q-bio.MN), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Physical sciences, FOS: Physical sciences, FOS: Biological sciences, FOS: Biological sciences},
+  
+  title = {Reachability in Restricted Chemical Reaction Networks},
+  
+  publisher = {arXiv},
+  
+  year = {2022},
+  
+  copyright = {Creative Commons Attribution Non Commercial Share Alike 4.0 International},
+  selected={false},
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@misc{https://doi.org/10.48550/arxiv.2211.12589,
+  doi = {10.48550/ARXIV.2211.12589},
+  
+  url = {https://arxiv.org/abs/2211.12589},
+  arxiv = {2211.12589},
+  
+  author = {Alaniz, Robert M. and Caballero, David and Cirlos, Sonya C. and Gomez, Timothy and Grizzell, Elise and Rodriguez, Andrew and Schweller, Robert and Tenorio, Armando and Wylie, Tim},
+  
+  keywords = {Formal Languages and Automata Theory (cs.FL), Distributed, Parallel, and Cluster Computing (cs.DC), Emerging Technologies (cs.ET), Adaptation and Self-Organizing Systems (nlin.AO), Cellular Automata and Lattice Gases (nlin.CG), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Physical sciences, FOS: Physical sciences},
+  
+  title = {Building Squares with Optimal State Complexity in Restricted Active Self-Assembly},
+  
+  publisher = {arXiv},
+  
+  year = {2022},
+  
+  copyright = {Creative Commons Attribution Non Commercial Share Alike 4.0 International},
+  selected={false},
 }
+
+
