Add CCCG, thesis, and other news

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,20 @@
 
-@InProceedingsEarly{covert3d,
+@InproceedingsEarly{burnout2023,
+  author = {Alaniz,  Robert M. and Coulombe,  Michael and Demaine,  Erik D. and Fu,  Bin and Knobel,  Ryan and Gomez,  Timothy and Grizzell,  Elise  and Rodriguez,  Andrew  and Schweller,  Robert  and Wylie,  Tim},
+  title = {Reconfiguration of Linear Surface Chemical Reaction Networks with Bounded State Change},
+  booktitle = {Proc. of the 35th Canadian Conference on Computational Geometry (CCCG'23)},
+  year = {2023},
+  selected = {true},
+}
+
+@mastersthesis{masterthesis2023,
+  author  = "Rodriguez, Andrew",
+  title   = "Problems in Algorithmic Self-Assembly and a Genetic Approach to Patterns",
+  school  = "University of Texas Rio Grande Valley",
+  year    = "2023"
+}
+
+@InProceedings{covert3d,
   author = {Alaniz, Robert M. and Caballero, David and Gomez, Timothy and Grizzell, Elise and Rodriguez, Andrew and Schweller, Robert and Wylie, Tim},
   title = {Covert Computation in the Abstract Tile-Assembly Model},
   booktitle = {Proc. of the Symposium on Algorithmic Foundations of Dynamic Networks (SAND'23)},
@@ -7,7 +22,7 @@
   selected = {true},
 }
 
-@InProceedingsEarly{stagedsim,
+@InProceedings{stagedsim,
   author = {Cirlos, Sonya C. and Gomez, Timothy and Grizzell, Elise and Rodriguez, Andrew and Schweller, Robert and Wylie, Tim},
   title = {Simulation of Multiple Stages in Single Bin Active Tile Self-Assembly},
   booktitle = {Proc. of the 20th International Conference on Unconventional Computation and Natural Computation (UCNC'23)},
