Add DNA to pubs and news

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 
+Complexity of Reconfiguration in Surface Chemical Reaction Networks.
+Robert M. Alaniz, Josh Brunner, Michael Coulombe, Erik D. Demaine, Yevhenii Diomidov, Timothy Gomez, Elise Grizzell, Ryan Knobel, Jayson Lynch, Robert Schweller and Tim Wylie
+To appear in Proc. of the 29th International Conference on DNA Computing and Molecular Programming (DNA'23), 2023.
+
+@InproceedingsEarly{scrnreach2023,
+  author = {Alaniz,  Robert M. and Brunner, Josh and Coulombe,  Michael and Demaine,  Erik D. and Diomidov, Yevhenii and Gomez,  Timothy and Grizzell,  Elise  and Knobel,  Ryan and Lynch, Jason and Rodriguez,  Andrew  and Schweller,  Robert  and Wylie,  Tim},
+  title = {Complexity of Reconfiguration in Surface Chemical Reaction Networks},
+  booktitle = {Proc. of the 29th International Conference on DNA Computing and Molecular Programming (DNA'23)},
+  year = {2023},
+  selected = {true},
+}
+
 @InproceedingsEarly{burnout2023,
-  author = {Alaniz,  Robert M. and Coulombe,  Michael and Demaine,  Erik D. and Fu,  Bin and Knobel,  Ryan and Gomez,  Timothy and Grizzell,  Elise  and Rodriguez,  Andrew  and Schweller,  Robert  and Wylie,  Tim},
+  author = {Alaniz,  Robert M. and Coulombe,  Michael and Demaine,  Erik D. and Fu,  Bin and Gomez,  Timothy and Grizzell,  Elise  and Knobel,  Ryan and Rodriguez,  Andrew  and Schweller,  Robert  and Wylie,  Tim},
   title = {Reconfiguration of Linear Surface Chemical Reaction Networks with Bounded State Change},
   booktitle = {Proc. of the 35th Canadian Conference on Computational Geometry (CCCG'23)},
   year = {2023},
