Add squares journal and journal entry to bib.html

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,11 @@
 
-Complexity of Reconfiguration in Surface Chemical Reaction Networks.
-Robert M. Alaniz, Josh Brunner, Michael Coulombe, Erik D. Demaine, Yevhenii Diomidov, Timothy Gomez, Elise Grizzell, Ryan Knobel, Jayson Lynch, Robert Schweller and Tim Wylie
-To appear in Proc. of the 29th International Conference on DNA Computing and Molecular Programming (DNA'23), 2023.
+@articleEarly{squares2023,
+  author =  {Alaniz, Robert M. and Caballero, David and Cirlos, Sonya C. and Gomez, Timothy and Grizzell, Elise and Rodriguez, Andrew and Schweller, Robert and Tenorio, Armando and Wylie, Tim},
+  title = {Building Squares with Optimal State Complexity in Restricted Active Self-Assembly},
+  journal = "Journal of Computer and System Sciences",
+  year    = 2023,
+  selected = {true},
+}
 
 @InproceedingsEarly{scrnreach2023,
   author = {Alaniz,  Robert M. and Brunner, Josh and Coulombe,  Michael and Demaine,  Erik D. and Diomidov, Yevhenii and Gomez,  Timothy and Grizzell,  Elise  and Knobel,  Ryan and Lynch, Jason and Rodriguez,  Andrew  and Schweller,  Robert  and Wylie,  Tim},
