--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,16 @@
 
-@articleEarly{squares2023,
-  author =  {Alaniz, Robert M. and Caballero, David and Cirlos, Sonya C. and Gomez, Timothy and Grizzell, Elise and Rodriguez, Andrew and Schweller, Robert and Tenorio, Armando and Wylie, Tim},
-  title = {Building Squares with Optimal State Complexity in Restricted Active Self-Assembly},
-  journal = "Journal of Computer and System Sciences",
-  year    = 2023,
-  selected = {true},
+@article{ALANIZ2023103462,
+title = {Building Squares With Optimal State Complexity in Restricted Active Self-Assembly},
+journal = {Journal of Computer and System Sciences},
+volume = {138},
+pages = {103462},
+year = {2023},
+issn = {0022-0000},
+doi = {https://doi.org/10.1016/j.jcss.2023.103462},
+url = {https://www.sciencedirect.com/science/article/pii/S0022000023000673},
+author = {Robert M. Alaniz and David Caballero and Sonya C. Cirlos and Timothy Gomez and Elise Grizzell and Andrew Rodriguez and Robert Schweller and Armando Tenorio and Tim Wylie},
+keywords = {Self-assembly, Tile automata, Cellular automata, Square building, Seeded TA},
+abstract = {Tile Automata is a recently defined model of self-assembly that borrows many concepts from cellular automata to create active self-assembling systems where changes may be occurring within an assembly without requiring attachment. This model has been shown to be powerful even with limited assembly size, but many fundamental questions have yet to be explored. Here, we study the state complexity of assembling n×n squares in seeded Tile Automata systems where growth starts from a seed and tiles attach one at a time, similar to the abstract Tile Assembly Model. We provide optimal bounds for three classes of seeded Tile Automata systems (all without detachment), which vary in the amount of complexity allowed in the transition rules. We show that, in general, seeded Tile Automata systems require Θ(log14⁡n) states. For single-transition systems, where only one state may change in a transition rule, we show a bound of Θ(log13⁡n), and for deterministic systems, where each pair of states may only have one associated transition rule, a bound of Θ((log⁡nlog⁡log⁡n)12). Along the way, we provide optimal bounds for the subroutines of building binary strings and building O(log⁡n)×n rectangles.}
 }
 
 @InproceedingsEarly{scrnreach2023,
@@ -99,25 +105,3 @@
   copyright = {Creative Commons Attribution Non Commercial Share Alike 4.0 International},
   selected={false},
 }
-
-@misc{https://doi.org/10.48550/arxiv.2211.12589,
-  doi = {10.48550/ARXIV.2211.12589},
-  
-  url = {https://arxiv.org/abs/2211.12589},
-  arxiv = {2211.12589},
-  
-  author = {Alaniz, Robert M. and Caballero, David and Cirlos, Sonya C. and Gomez, Timothy and Grizzell, Elise and Rodriguez, Andrew and Schweller, Robert and Tenorio, Armando and Wylie, Tim},
-  
-  keywords = {Formal Languages and Automata Theory (cs.FL), Distributed, Parallel, and Cluster Computing (cs.DC), Emerging Technologies (cs.ET), Adaptation and Self-Organizing Systems (nlin.AO), Cellular Automata and Lattice Gases (nlin.CG), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Physical sciences, FOS: Physical sciences},
-  
-  title = {Building Squares with Optimal State Complexity in Restricted Active Self-Assembly},
-  
-  publisher = {arXiv},
-  
-  year = {2022},
-  
-  copyright = {Creative Commons Attribution Non Commercial Share Alike 4.0 International},
-  selected={false},
-}
-
-
